@@ -47,6 +47,9 @@ Zope Changes
         - Collector #2287: fixed missing import of 'render_blocks' in 
           SendMailTag.py
 
+        - Collector #2289: leading \n\r inside messageText broke
+          mail headers
+
     Zope 2.4 alpha 1
 
       Features Added
